<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <Button
        android:id="@+id/button_add_task_in_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ADD TO GROUP"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_group_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_view_group_title"
        app:layout_constraintVertical_bias="1" />

    <Button
        android:id="@+id/button_delete_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="DELETE GROUP"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_group_title"
        app:layout_constraintStart_toEndOf="@+id/button_add_task_in_group"
        app:layout_constraintTop_toTopOf="@+id/text_view_group_title"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/text_view_group_title"
        android:layout_width="match_parent"
        android:layout_height="139dp"
        android:layout_alignParentEnd="true"
        android:background="@android:color/darker_gray"
        android:text="group"
        android:textSize="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <TextView
        android:id="@+id/text_view_group_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_group_title"
        android:text="Status:"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_group_title"
        app:layout_constraintStart_toStartOf="@+id/text_view_group_title"
        app:layout_constraintTop_toTopOf="@+id/text_view_group_title"></TextView>

    <TextView
        android:id="@+id/text_view_group_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_group_title"
        android:layout_marginStart="30dp"
        android:text="Status"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_group_title"
        app:layout_constraintStart_toEndOf="@+id/text_view_group_status_text"
        app:layout_constraintTop_toTopOf="@+id/text_view_group_title"
        app:layout_constraintVertical_bias="0.505"></TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_children"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_group_title"
        tools:listitem="@layout/single_task"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>


</androidx.constraintlayout.widget.ConstraintLayout>