...
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        app:layout_constraintTop_toTopOf="@+id/tab_layout" />

    <Button
        android:id="@+id/button_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:text="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tab_layout"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true" />

    <com.google.android.material.tabs.TabLayout
...
