...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddEditTaskActivity">

    <EditText
        android:id="@+id/enter_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter title"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/enter_location"
...
        app:layout_constraintTop_toBottomOf="@+id/enter_title"/>
    <TextView
        android:id="@+id/text_view_deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Deadline: "
        app:layout_constraintBottom_toTopOf="@+id/task_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_location" />
    <EditText
        android:id="@+id/enter_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
